Align kpi tag with tooltip and fix button icon

--- a/src/css/ui/components/kpi-tag.css
+++ b/src/css/ui/components/kpi-tag.css
@@ -22,6 +22,14 @@
   background: var(--c-color_kpi-tag_bg_hovered);
 }
 
+.kpi-tag .kpi-tag_inner {
+  display: inline-flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  place-items: center;
+  place-content: center;
+}
+
 .kpi-tag .kpi-tag_kpi {
   font-weight: bold;
   font-family: var(--font-monospace);
